# aesir3_mnist

./: Cargo.toml  README.md
src/: better_random_layer.rs  lib.rs  mnist_layer.rs  random_diehl_layer.rs
src/mnist_layer/: layer_tests.rs
