[package]
name = "aesir3_mnist"
version = "0.1.0"
authors = ["Danny Geisz <dannygeisz@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "random"
path = "src/bin/random_main.rs"


[dependencies]
mnist = "0.4.1"
rulinalg = "0.4.2"
rand = "0.7.3"
aesir3 = { path = "../aesir3" }
